--- a/youme.html
+++ b/youme.html
@@ -1,1 +1,4 @@
-<iframe width="801" height="451" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1" title="Rick Astley - Never Gonna Give You Up (Official Video) (4K Remaster)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<video width="801" height="451" autoplay>
+  <source src="./rickroll.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
